syntax = "proto3";

package user;

message UserPublic {
  string id = 1;
  string name = 2;
  string email = 3;
  string created_at = 4;
  string updated_at = 5;
}

message FindUsersResponse {
  repeated UserPublic users = 1;
}
